Fix overflow header issue

--- a/app/styles/header.scss
+++ b/app/styles/header.scss
@@ -147,8 +147,8 @@
 
 @media only screen and (max-width: 50em) {
   .Header {
-    margin-left: -0.5rem;
-    margin-right: -0.5rem;
+    // margin-left: -0.5rem;
+    // margin-right: -0.5rem;
     height: 200px;
 
     &:before {
